# LangGraph

./: 1_basics.ipynb  Readme.md  pyproject.toml
NoteBooks/: 1_basics.ipynb  2_Pydantic.ipynb  3_messages.ipynb  4_prompts.ipynb  tools.ipynb
notes/: AgenticAI_notes.txt
